VSE: blender crashes when adding speed transition to last retiming key #115007

Closed
opened 2023-11-16 19:17:59 +01:00 by heini · 2 comments

System Information
Operating system: Linux-5.4.0-155-generic-x86_64-with-glibc2.31 64 Bits, X11 UI
Graphics card: NVIDIA GeForce 940M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-15 19:33, hash: d0c073898a93
Worked: doesn't work in 4.0 either

Short description of error
If you select the last retiming key of the strip and add a speed transition, blender will crash. (I know this doesn't really make sense but it can happen by accident) maybe similar to this?
tested with factory defaults

  • add a clip to the vse
  • show retiming keys, select the last
  • add speed transition

(it seems to not be an issue when another key was added before but becomes unstable after that, crashes when moving the strip or one of the keys)

**System Information** Operating system: Linux-5.4.0-155-generic-x86_64-with-glibc2.31 64 Bits, X11 UI Graphics card: NVIDIA GeForce 940M/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-15 19:33, hash: `d0c073898a93` Worked: doesn't work in 4.0 either **Short description of error** If you select the last retiming key of the strip and add a speed transition, blender will crash. (I know this doesn't really make sense but it can happen by accident) maybe similar to [this?](https://projects.blender.org/blender/blender/issues/109475) tested with factory defaults - add a clip to the vse - show retiming keys, select the last - add speed transition (it seems to not be an issue when another key was added before but becomes unstable after that, crashes when moving the strip or one of the keys)
heini added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 19:18:00 +01:00

Thank you for the report.
I can confirm. And it seems to have the same crash-log as #109475. So if it's not a duplicate, they're well related.

Exception thrown: read access violation.
start_key was nullptr.
>	blender.exe!seq_retiming_evaluate(const Sequence * seq, const float frame_index) Line 259	C++
 	blender.exe!SEQ_retiming_add_key(const Scene * scene, Sequence * seq, int timeline_frame) Line 290	C++
 	blender.exe!SEQ_retiming_add_transition(const Scene * scene, Sequence * seq, SeqRetimingKey * key, int offset) Line 546	C++
 	blender.exe!transition_add_new_for_seq(const bContext * C, const wmOperator * op, Sequence * seq, const int timeline_frame, const int duration) Line 449	C++
 	blender.exe!transition_add_from_retiming_selection(const bContext * C, const wmOperator * op, const int duration) Line 469	C++
 	blender.exe!sequencer_retiming_transition_add_exec(bContext * C, wmOperator * op) Line 487	C++
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1562	C++
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, const wmEvent * event) Line 1751	C++
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties, const wmEvent * event) Line 1800	C++
 	blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const wmEvent * event, const char * drawstr) Line 1989	C++
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1047	C++
 	blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * __formal) Line 11655	C++
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, const bool always_pass) Line 831	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3333	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3450	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Line 4077	C++
 	blender.exe!WM_main(bContext * C) Line 616	C++
 	blender.exe!main(int argc, const char * * __formal) Line 597	C++

@iss ^

Thank you for the report. I can confirm. And it seems to have the same crash-log as #109475. So if it's not a duplicate, they're well related. ``` Exception thrown: read access violation. start_key was nullptr. ``` ``` > blender.exe!seq_retiming_evaluate(const Sequence * seq, const float frame_index) Line 259 C++ blender.exe!SEQ_retiming_add_key(const Scene * scene, Sequence * seq, int timeline_frame) Line 290 C++ blender.exe!SEQ_retiming_add_transition(const Scene * scene, Sequence * seq, SeqRetimingKey * key, int offset) Line 546 C++ blender.exe!transition_add_new_for_seq(const bContext * C, const wmOperator * op, Sequence * seq, const int timeline_frame, const int duration) Line 449 C++ blender.exe!transition_add_from_retiming_selection(const bContext * C, const wmOperator * op, const int duration) Line 469 C++ blender.exe!sequencer_retiming_transition_add_exec(bContext * C, wmOperator * op) Line 487 C++ blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, const wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1562 C++ blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, const wmEvent * event) Line 1751 C++ blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties, const wmEvent * event) Line 1800 C++ blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const wmEvent * event, const char * drawstr) Line 1989 C++ blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1047 C++ blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * __formal) Line 11655 C++ blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, const bool always_pass) Line 831 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3333 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3450 C++ blender.exe!wm_event_do_handlers(bContext * C) Line 4077 C++ blender.exe!WM_main(bContext * C) Line 616 C++ blender.exe!main(int argc, const char * * __formal) Line 597 C++ ``` @iss ^

You should not be able to add transition to last key. Will fix

You should not be able to add transition to last key. Will fix
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-21 05:27:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115007
No description provided.