Fix #115007: Crash when creating transition from last reiming key

This operation is not permitted, cancel operator execution when
attempted.

Pull Request: https://projects.blender.org/blender/blender/pulls/115122