source/blender/editors/space_sequencer/sequencer_retiming.cc
@@ -446,6 +446,11 @@ static bool transition_add_new_for_seq(const bContext *C,
     key = SEQ_retiming_key_get_by_timeline_frame(scene, seq, timeline_frame);
   }
 
+  if (SEQ_retiming_is_last_key(seq, key) || key->strip_frame_index == 0) {
+    BKE_report(op->reports, RPT_WARNING, "Can not create transition from first or last key");
+    return false;
+  }
+
   SeqRetimingKey *transition = SEQ_retiming_add_transition(scene, seq, key, duration);
 
   if (transition == nullptr) {
